[package]
name = "regular"
version = "0.9.2"
authors = ["Graham Breed <gbreed@gmail.com>"]
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
nalgebra = "0.32.5"
num-integer = "0.1.46"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
strip = true
incremental = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.37"

features = [
  'console',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'HtmlInputElement',
  'Location',
  'Node',
  'Window',
]
