[package]
name = "regular"
version = "0.9.8"
authors = ["Graham Breed <gbreed@gmail.com>"]
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
nalgebra = "0.34.1"
num-integer = "0.1.46"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
strip = true
incremental = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.37"

features = [
  'console',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlTextAreaElement',
  'Location',
  'Node',
  'Window',
]
