[package]
name = "regular"
version = "1.1.4"
authors = ["Graham Breed <gbreed@gmail.com>"]
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
microlp = "0.2.11"
nalgebra = "0.34.1"
num-integer = "0.1.46"

[[bin]]
name = "regular-cli"
path = "src/main.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.108"
js-sys = "0.3.85"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
incremental = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.69"

features = [
  'console',
  'Blob',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlTextAreaElement',
  'Location',
  'Node',
  'Url',
  'Window',
]
